--- a/doc/toml/example/config/app/appdefaults.ag.toml
+++ b/doc/toml/example/config/app/appdefaults.ag.toml
@@ -1,12 +1,7 @@
 
 
-# all ag.toml files can optionally contain a version section.  if version of the running astroglue app is out of bounds a warning message will be printed
-# to the user and the file will be ignored for future processing.
-
-[version]
-
-min="2.3.0"
-max="4.5.8"
+[repo]
+kind="preferences"
 
 # List the initial search path to find other repos, when the app launches it always first loads this ag.toml file and this file should list all of the
 # standard default repo locations.  When searching repos, repos listed LAST have precidence, so target file can override the root processing defults, 
