--- a/doc/toml/example/processed-repo/ngc281/target.ag.toml
+++ b/doc/toml/example/processed-repo/ngc281/target.ag.toml
@@ -2,24 +2,6 @@
 # it is initially auto populated based on the best guess of astroglue, but the user
 # can hand customize as needed
 
-[author]
-
-# (if not present this section will be auto generated at processing time)
-# this whole secion is auto copied from userprefs.ag.toml
-name = "Bob Dude"
-email = "foo@foo.com"
-website = "http://mydomain.com/astocruft"
-license = "Creative commons etc..."
-
-[about]
-
-# (if not present this section will be auto generated at processing time)
-# this section contains textual information the user might want to share on social media or whatever
-# some of it comes from FITS headers gleaned during processing or other statistics
-
-target.id = "NGC281"
-target.name = "Some Big Nebula"
-
 [processing.recipe]
 
 # Astroglue will search all recipe repos to find this by name
@@ -31,7 +13,22 @@ python-recipe = "osc-dual-duo"
 
 # a default astroglue file for a particular processed target will typically contain only the preceeding
 
+[author]
 
+# (if not present this section will be auto generated at processing time)
+# this whole secion is auto copied from userprefs.ag.toml
+name = "Bob Dude"
+email = "foo@foo.com"
+website = "http://mydomain.com/astocruft"
+license = "Creative commons etc..."
+
+[about] # (if not present this section will be auto generated at processing time)
+
+# this section contains textual information the user might want to share on social media or whatever
+# some of it comes from FITS headers gleaned during processing or other statistics
+
+target.id = "NGC281"
+target.name = "Some Big Nebula"
 
 # (if not present this section will be auto generated at processing time)
 [[ aquisition ]]
