--- a/doc/toml/example/raw-repo/repo.ag.toml
+++ b/doc/toml/example/raw-repo/repo.ag.toml
@@ -4,3 +4,13 @@
 
 kind="raws"
 
+[[pattern]]
+# raw repos can (or must?) specify a pattern to find per session light/flat/dark/bias
+# this path is relative to the base of the repo
+# the following is the correct pattern for my (customized) NINA based layout
+relative="{target}/{sessionid}/{frametype}/*_{sessionconfig}_*.fit*"
+
+[[pattern]]
+# my NINA raw bias, darks live here
+# the following is the correct pattern for my (customized) NINA based layout
+relative="masters_raw/{date}/{frametype}/{date}_*.fit*"
