--- a/doc/toml/example/config/app/appdefaults.ag.toml
+++ b/doc/toml/example/config/app/appdefaults.ag.toml
@@ -3,6 +3,9 @@
 [repo]
 kind="preferences"
 
+# FIXME, somewhere here list default patterns which can be used to identiy NINA, ASIAIR, SEESTAR 
+# raw repo layouts
+
 # List the initial search path to find other repos, when the app launches it always first loads this ag.toml file and this file should list all of the
 # standard default repo locations.  When searching repos, repos listed LAST have precidence, so target file can override the root processing defults, 
 # then the user prefs, then a live github URL or whatever
