--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
     "recommendations": [
         "ms-python.python",
         "ms-python.black-formatter",
+        "tamasfe.even-better-toml",
         "google.geminicodeassist"
     ]
 }
