--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,16 @@
             "type": "debugpy",
             "request": "launch",
             "program": "process.py",
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
+            "python": "${workspaceFolder}/.vscode/get_poetry_python.sh"
+        },
+        {
+            "name": "Python Debugger: astroglue app",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "astroglue.main",
+            "console": "integratedTerminal",
+            "python": "${workspaceFolder}/.vscode/get_poetry_python.sh"
         }
     ]
 }
