begin structured repo handling

--- a/src/astroglue/appdefaults.ag.toml
+++ b/src/astroglue/appdefaults.ag.toml
@@ -38,11 +38,11 @@ file = "/foo/blah"
 # or inband?
 
 
-# allow including multiple recipies
-[[repo.ref]]
+# allow including multiple recipies FIXME old idea, not sure if needed.
+# [[repo.ref]]
 
 # looks for a file with this name and .py for the code and .toml for the config
 # we'll expect that toml file to contain various [[processing.*]] sections which will be loaded at this
 # location in the sequence as if they were defined here
-by-file = "process-osc-dual-duo"
-by-url = "http:..."
+#by-file = "process-osc-dual-duo"
+#by-url = "http:..."
