--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,20 +5,20 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python Debugger: processing script",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "process.py",
-            "console": "integratedTerminal",
-            "python": "${workspaceFolder}/.vscode/get_poetry_python.sh"
-        },
-        {
             "name": "Python Debugger: astroglue app",
             "type": "debugpy",
             "request": "launch",
             "module": "astroglue.main",
             "console": "integratedTerminal",
             "python": "${workspaceFolder}/.vscode/get_poetry_python.sh"
-        }
+        },
+        {
+            "name": "Python Debugger: processing script",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "poc/process.py",
+            "console": "integratedTerminal",
+            "python": "${workspaceFolder}/.vscode/get_poetry_python.sh"
+        },
     ]
 }
