--- a/doc/toml/example/raw-repo/repo.ag.toml
+++ b/doc/toml/example/raw-repo/repo.ag.toml
@@ -13,3 +13,8 @@ relative = "{target}/{sessionid}/{frametype}/*_{sessionconfig}_*.fit*"
 # my NINA raw bias, darks live here
 # the following is the correct pattern for my (customized) NINA based layout
 relative = "masters_raw/{date}/{frametype}/{date}_*.fit*"
+
+[[pattern]]
+# this is the correct path to my customized masters-raw files
+type = "master-raw"
+relative = "masters-raw/{sessionid}/{frametype}/*_{sessionconfig}_*.fit*"
