--- a/doc/toml/example/recipe-repo/osc_dual_duo/astroglue.toml
+++ b/doc/toml/example/recipe-repo/osc_dual_duo/astroglue.toml
@@ -1,4 +1,7 @@
 
+[repo]
+kind = "recipe"
+
 # all ag.toml files can optionally contain a version section.  if version of the running astroglue app is out of bounds a warning message will be printed
 # to the user and the file will be ignored for future processing.
 [version]
@@ -6,7 +9,8 @@ min="0.1.0"
 max="4.5.8"
 
 [processing.recipe.metadata]
-author = "..."
+author.name = "Kevin Hester"
+author.email = "kevinh@geeksville.com"
 description = "Process OSC dual duo filter data, extracting Ha and Sii from the red channel"
 
 # FIXME-somehow-specify-what-filternames are used to auto detect this recipe can be used?
