--- a/doc/toml/example/recipe-repo/astroglue.toml
+++ b/doc/toml/example/recipe-repo/astroglue.toml
@@ -1,5 +1,14 @@
 [repo]
 kind = "recipe"
 
+# Note: For automated recipe finding, it is important to list more demanding recipies first.  For instance:
+# osc_dual_duo (which needs a HaOiii and a SiiOiii filter) should be listed first, so that if we see
+# dataset containing both HaOiii and SiiOiii filters we will assume that is the recipe to use.
+#
+# But later if we see a dataset containing only HaOiii data, assume osc_single_duo should be used.
+
 [[repo.ref]]
 dir = "osc_dual_duo"
+
+[[repo.ref]]
+dir = "osc_single_duo"
