--- a/doc/toml/example/recipe-repo/osc_dual_duo/astroglue.toml
+++ b/doc/toml/example/recipe-repo/osc_dual_duo/astroglue.toml
@@ -32,7 +32,7 @@ auto.for-camera = ["OSC"]
 [[processing.stage]]
 
 tool = "siril"
-when = "session-config" # run once per session-config
+when = "session-light" # run once per session-config
 output = "FIXME"
 
 script = '''
@@ -55,7 +55,7 @@ temporaries = ["FIXME"]
 [[processing.stage]]
 
 tool = "python"
-when = "post-session" # run once after all session/session-config processing was done
+when = "session-stack" # run once after all session/session-config processing was done
 
 script-file = "script.py"
 
