--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,8 @@ packages = [{ include = "astroglue", from = "src" }]
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[dependency-groups]
+dev = [
+    "pytest (>=8.4.2,<9.0.0)"
+]
