--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,5 +20,13 @@
             "console": "integratedTerminal",
             "python": "${workspaceFolder}/.vscode/get_poetry_python.sh"
         },
+        {
+            "name": "Python Debugger: PyTest",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "pytest",
+            "console": "integratedTerminal",
+            "python": "${workspaceFolder}/.vscode/get_poetry_python.sh"
+        }
     ]
 }
