--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ description = ""
 authors = [{ name = "Kevin Hester", email = "kevinh@geeksville.com" }]
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = ["tomlkit (>=0.13.3,<0.14.0)", "multidict (>=6.7.0,<7.0.0)"]
+dependencies = ["tomlkit (>=0.13.3,<0.14.0)", "multidict (>=6.7.0,<7.0.0)", "rich (>=14.2.0,<15.0.0)"]
 
 [tool.poetry]
 packages = [{ include = "astroglue", from = "src" }]
