--- a/doc/toml/example/recipe-repo/master_bias/astroglue.toml
+++ b/doc/toml/example/recipe-repo/master_bias/astroglue.toml
@@ -3,7 +3,7 @@
 kind = "recipe"
 
 
-[processing.recipe.metadata]
+[recipe]
 author.name = "FIXMESiril?"
 author.email = "FIXMESiril?"
 description = "Generate a master flat flat from raw flats"
@@ -13,7 +13,7 @@ auto.for-camera = []
 
 
 
-[[processing.stage]]
+[[recipe.stage]]
 
 tool = "siril"
 
