clean up stage asbtract

--- a/doc/toml/example/recipe-repo/astroglue.toml
+++ b/doc/toml/example/recipe-repo/astroglue.toml
@@ -18,3 +18,17 @@ dir = "osc_dual_duo"
 
 [[repo.ref]]
 dir = "osc_single_duo"
+
+# processing stages, currently all declared here, but possibly in the future they could be added by user/other toml files
+
+[[stages]]
+name = "session-config" # for flat processing, master generation etc
+priority = 10
+
+[[stages]]
+name = "session-light" # generate light frames from lights and with reference to flats/bias
+priority = 20
+
+[[stages]]
+name = "session-stack" # stack frames
+priority = 30
