--- a/doc/toml/example/recipe-repo/master_bias/astroglue.toml
+++ b/doc/toml/example/recipe-repo/master_bias/astroglue.toml
@@ -18,8 +18,10 @@ tool = "siril"
 
 # or auto?
 # find the most recent raw fits for the current instrument (as of the time of session start)
-input.source = "most-recent"
-input.type = "bias"
+input.source = "most-recent" # only look for the most recent set of raws for this particular type
+input.type = "bias" # look in all raw repos, but look only for bias files
+
+FIXME add the concept of absolute file path inputs (for easy early testing)
 
 # make the following also work
 #
